@@ -1,5 +1,17 @@
 2016-12-14  Gerrit Holl  <g.holl@reading.ac.uk>
 
+	* typhon/datasets/tovs.py:
+
+	(HIRS): Add new attribute temperature_fields that lists all
+	temperatures that can be requested, and populate with temperatures
+	available in all HIRS.
+
+	(HIRSKLM): Add temperature fields only available in KLM
+
+	(HIRS4): Add temperature field only available in HIRS4
+
+2016-12-14  Gerrit Holl  <g.holl@reading.ac.uk>
+
 	* typhon/plots/plots.py(scatter_density_plot_matrix):
 
 	- Permit to pass a regular 2-D array as well (but see warning in
